1eres anims de la licorne, réinsertion de l'exemple en html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -88,14 +88,12 @@
             <div>
                 <div id='error'></div>
                 <div class="QRcode">
-                <img src="">
+                <img src="src/picture/code.png">
 
                 </div>
 
-                <h2 id="name"></h2>
+                <h2 id="name">Tyller Durden</h2>
             </div>
         </div>
-        
-        <script src="public/script.js"></script>
     </body>
 </html>
