licorne remplacé par un GIF

--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>pass sanitaire</title>
         <meta name="description" content="voici mon pass sanitaire"/>
-        <meta name="viewport" content="width=200, initial-scale=1, user-scalable=no">
+        <meta name="viewport" content="width=200, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
         <div class="anim">
             <span class="responsive-unicorn">
                 <span class="unicorn">
@@ -77,23 +76,6 @@
                 </span>
             </span>
 
-            <div class="ground">
-                <span class="grid-1"></span>
-                <span class="grid-2"></span>
-            </div>
-        </div>
-
-        <div class="info">
-            <h1>pass sanitaire</h1>
-            <div>
-                <div id='error'></div>
-                <div class="QRcode">
-                <img src="src/picture/code.png">
-
-                </div>
-
-                <h2 id="name">Tyller Durden</h2>
-            </div>
         </div>
     </body>
 </html>
