ecriture de base de la page de confidentialité de l'appli

--- a/index.html
+++ b/index.html
@@ -9,73 +9,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="anim">
-            <span class="responsive-unicorn">
-                <span class="unicorn">
-                    <span class="ensemble-chest">
-                        <span class="chest"></span>
-                        <span class="frontlug-left">
-                            <span class="frontlug-part1">
-                                <span class="ensemble-frontlug">
-                                    <span class="frontlug-part2"></span>
-                                    <span class="hoof"></span>
-                                </span>
-                            </span>
-                        </span>
-                        <span class="frontlug-right">
-                            <span class="frontlug-part1">
-                                <span class="ensemble-frontlug">
-                                    <span class="frontlug-part2"></span>
-                                    <span class="hoof"></span>
-                                </span>
-                            </span>
-                        </span>
-                        <span class="backlug-left">
-                            <span class="backlug-part1">
-                                <span class="backlug-part2">
-                                    <span class="ensemble-backlug">
-                                        <span class="backlug-part3"></span>
-                                        <span class="hoof"></span>
-                                    </span>
-                                </span>
-                            </span>
-                        </span>
-                        <span class="backlug-right">
-                            <span class="backlug-part1">
-                                <span class="backlug-part2">
-                                    <span class="ensemble-backlug">
-                                        <span class="backlug-part3"></span>
-                                        <span class="hoof"></span>
-                                    </span>
-                                </span>
-                            </span>
-                        </span>
-                    </span>
-                    <span class="ensemble-tail">
-                        <span class="tail1"></span>
-                        <span class="tail2"></span>
-                        <span class="tail3"></span>
-                    </span>
-                    <span class="ensemble-neck">
-                        <span class="neck">
-                            <span class="ensemble-head">
-                                <span class="head"></span>
-                                <span class="ears-right"></span>
-                                <span class="mane1"></span>
-                                <span class="mane2"></span>
-                                <span class="ears-left"></span>
-                            </span>
-                        </span>
-                        <span class="ensemble-mane">
-                                <span class="mane3"></span>
-                                <span class="mane4"></span>
-                                <span class="mane5"></span>
-                                <span class="mane6"></span>
-                            </span>
-                    </span>
-                </span>
-            </span>
+        <h1>Règles de Confidentialité Applications Mobile Google Play.</h1>
 
-        </div>
+        L'application mobile Pass NEON sur la plateformes Google Play.</br>
+        En téléchargeant l’application, vous acceptez les conditions relatives à cette application mobile.</br>
+        Les information collectés au sein de notre application ne seront pas utilisées, ni revendues à des tiers.</br>
+        Vous disposez d’un droit d’accès et de modifications de vos données en vertu de la loi « Informatique & Libertés ». </br>
+        Vous pouvez nous contacter pour toutes informations ou toutes questions sur notre adresse : rackhamledev@gmail.com
+        
     </body>
 </html>
