correction de l'icon + remplacement du crop par le scan QRcode

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <body>
         <h1>Règles de Confidentialité Applications Mobile Google Play.</h1>
 
-        L'application mobile Pass NEON sur la plateformes Google Play.</br>
-        En téléchargeant l’application, vous acceptez les conditions relatives à cette application mobile.</br>
-        Les information collectés au sein de notre application ne seront pas utilisées, ni revendues à des tiers.</br>
-        Vous disposez d’un droit d’accès et de modifications de vos données en vertu de la loi « Informatique & Libertés ». </br>
-        Vous pouvez nous contacter pour toutes informations ou toutes questions sur notre adresse : rackhamledev@gmail.com
+        L'application mobile Pass NEON sur la plateformes Google Play.<br/>
+        En téléchargeant l’application, vous acceptez les conditions relatives à cette application mobile.<br/>
+        Les information collectés au sein de notre application ne seront pas utilisées, ni revendues à des tiers.<br/>
+        Vous disposez d’un droit d’accès et de modifications de vos données en vertu de la loi « Informatique & Libertés ».<br/>
+        Vous êtes responsable à 100% des informations que vous donnez à l'application.<br/>
+        L'application Pass NEON ne permet pas de remplacer l'application 'Tous anti-covid' du gouvernement, il est donc conseiller de garder l'application 'tous anti-covid' ou le certificat au format papier.<br/>
+
+        Pour toutes informations ou toutes questions, vous pouvez nous contacter sur notre adresse mail : rackhamledev@gmail.com
         
     </body>
 </html>
