modifications des icons + agrandissement du titre sur le pass

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>pass sanitaire</title>
+        <title>pass Vaccinal</title>
         <meta name="description" content="voici mon pass sanitaire"/>
         <meta name="viewport" content="width=200, initial-scale=1">
         <link rel="stylesheet" href="style.css">
@@ -16,7 +16,7 @@
         Les information collectés au sein de notre application ne seront pas utilisées, ni revendues à des tiers.<br/>
         Vous disposez d’un droit d’accès et de modifications de vos données en vertu de la loi « Informatique & Libertés ».<br/>
         Vous êtes responsable à 100% des informations que vous donnez à l'application.<br/>
-        L'application Pass NEON ne permet pas de remplacer l'application 'TousAntiCovid' du gouvernement, il est donc conseiller de garder l'application 'TousAntiCovid' ou le certificat au format papier.<br/>
+        L'application Pass NEON ne permet pas de remplacer l'application 'TousAntiCovid' du gouvernement, il est donc conseillé de garder l'application "TousAntiCovid" ou le certificat au format papier.<br/>
 
         Pour toutes informations ou toutes questions, vous pouvez nous contacter sur notre adresse mail : rackhamledev@gmail.com
         
